Redesign the `ClusterOperatorConfig` class to make it more flexible and clean (#8329)
Signed-off-by: ShubhamRwt <shubhamrwt02@gmail.com>